--- a/AuthenticScience/newspaper/templates/newspaper/edits_new.html
+++ b/AuthenticScience/newspaper/templates/newspaper/edits_new.html
@@ -15,7 +15,7 @@
             {%if url_now == '/new' %}
                 <h1>New Article</h1>
             {% else %}
-                <h2>Article: {{ article.title }}</h2>
+                <h2>Article: <i>{{ article_title }}</i></h2>
             {% endif %}
         </div>
     </div>
